# LatCore

./: .gitignore  Makefile.am  Readme.md  acinclude.m4  bootstrap.sh  build.sh  configure.ac
lib/: Benchmark.cpp  Benchmark.hpp  BinReader.cpp  BinReader.hpp  EigenPlugin.hpp  LatCore.cpp  LatCore.hpp  Makefile.am  OptParser.cpp  OptParser.hpp  XmlReader.cpp  XmlReader.hpp  includes.hpp
